# para-cli

./: README.md  pyproject.toml
para_cli/: __init__.py  interactive.py
