[project]
name = "para-cli"
version = "0.1.0"
description = "A command line tool for managing your PARA system"
authors = []
requires-python = ">=3.13"
dependencies = [
    "typer",
    "rich",
    "textual",
]

[project.optional-dependencies]
interactive = [
    "textual",
]

[project.scripts]
para = "para_cli.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
